feat: automated idea code cleanup productive code